--- a/intervention/WebContent/login.html
+++ b/intervention/WebContent/login.html
@@ -37,7 +37,7 @@
 	$.material.init();
 </script>
 </head>
-<body>
+<body class="landingPage">
 	<h1 class="header">
 		Intervention <i>Online</i>
 	</h1>
@@ -52,15 +52,15 @@
       <div class="modal-body">
         <p>What would you like your display name to be?</p>
 		<div class="form-group is-empty">
-						<label for="inputDisplayName" class="col-md-2 control-label">Display Name</label>
+			<label for="inputDisplayName" class="col-md-2 control-label">Display Name</label>
 
-						<div class="col-md-10">
-							<input type="text" class="form-control" id="inputDisplayName"
-								placeholder="Display Name">
+			<div class="col-md-10">
+				<input type="text" class="form-control" id="inputDisplayName"
+					placeholder="Display Name">
 
-						</div>
-						<span class="material-input"></span>
-					</div>
+			</div>
+			<span class="material-input"></span>
+		</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="register btn btn-primary" data-dismiss="modal">Register<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 25.6563px; top: 17px; transform: scale(10.875); background-color: rgb(0, 150, 136);"></div></div></button>
