make game, join game logic

--- a/intervention/WebContent/login.html
+++ b/intervention/WebContent/login.html
@@ -74,7 +74,7 @@
 				<fieldset>
 					<legend>Log in / Register</legend>
 					<div class="col-md-10">
-						<span class="error" style="display: gone"></span>
+						<div class="error alert alert-dismissible alert-danger" role="alert" style="display:none"></div>
 					</div>
 					
 					<div class="form-group has-error">
