--- a/intervention/WebContent/home.html
+++ b/intervention/WebContent/home.html
@@ -77,11 +77,14 @@
 	
 </div>
 
+<p>
+<center><h1>Let's Play Intervention <i>Online</i> </h1></center>
+</p>
 
 
 <div class="row">
 		<div class="col-md-12">
-		<div class="error alert alert-success" role="alert"></div>
+		<div class="error alert alert-dismissible alert-danger" style="display:none" role="alert"></div>
 		</div>
 </div>
 <div class="row">
@@ -101,8 +104,15 @@
 	<div class="text-center col-md-4">
 		<h2>Or</h2>
 	</div>
-	<div class="text-center col-md-4">
-		<button type="button" class="join btn btn-primary btn-lg btn-block btn-raised" >Join Game</button>
+	<div class="text-center col-md-4" style="margin-top:7px">
+			 <input type="number"  class="form-control"  id="inputCode" placeholder="Enter game code, ex. 123456789">
+			<div class="searching" style="display:none"> ...Searching Game... </div>
+			<div class="join_game" style="display:none">
+					<p><h4><span class="game_search_status"></span></h4></p>
+					<br/>
+					<button type="button" class="joingamebtn btn btn-raised btn-primary" disabled onclick="javascript:joinGameWithCode()">EnterGame<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></button>
+			</div>
+	</div><!-- /input-group -->
 	</div>
 	
 </div>
@@ -123,15 +133,85 @@ $(document).ready(function() {
 
 var manageURL;
 
+
+
 $(".create").click(function(event) {
 		create();
 	});
 	
 	function create(){
-		$(".loading").show("slow");
-		$('.create').prop('disabled', true);
-		getId()
+	$('.create').prop('disabled', true);
+		$(".loading").slideDown("slow",function(){getId()});
+	}
 	
+	var timer;
+	$("#inputCode").keyup(function(){
+	if(!$(".searching").is(":visible")){
+			$(".searching").slideDown("slow");
+		}
+		
+		if($(".join_game").is(":visible")){
+			$(".join_game").slideUp("slow");
+		}
+		
+		clearTimeout(timer);
+		
+		//start or restart timer so we don't call each time they enter in code
+		timer = setTimeout(searchForGame, 1000);
+	});
+	
+	var joinGameURL = "";
+	function joinGameWithCode(){
+		Utils.goPage(joinGameURL);
+	}
+	
+	function setSearchStatus(obj){
+		$(".searching").slideUp("slow");
+		var joinGameBtn = $(".joingamebtn");
+		var joinGameWrapper = $(".join_game");
+		var gameSearchStatus = $(".game_search_status");
+		
+		if(!joinGameWrapper.is(":visible")){
+			joinGameWrapper.slideDown("slow");
+		}
+	
+		if(obj !== -1){
+			var uniqueId = obj.get("unique_id");
+			var isStarted = obj.get("started");
+			var ownerName = obj.get("owner_name");
+			
+			if(!isStarted){
+			joinGameUrl = "play.html?gameId=" +String(uniqueId);
+				joinGameBtn.prop("disabled",false);
+				gameSearchStatus.html(ownerName + " created this game and it is active, join now!");
+			} else {
+				joinGameBtn.prop("disabled",true);
+				gameSearchStatus.html("Cannot join game that has started");
+			}
+			
+		}else{
+			joinGameBtn.prop("disabled",true);
+			gameSearchStatus.html("Oops... game not found");
+		}
+	}
+	
+	function searchForGame(){
+		var GameScore = Parse.Object.extend("game");
+		var query = new Parse.Query(GameScore);
+		query.equalTo("unique_id", $("#inputCode").val());
+		query.equalTo("active",true);
+		query.find({
+		  success: function(results) {
+		  if(results.length>0){
+			setSearchStatus(results[0]);
+			} else {
+			setSearchStatus(-1);
+			}
+		  },
+		  error: function(error) {
+			Utils.showError(error.message);
+		  }
+		});
 	}
 	
 	//need to find a unique game id
@@ -156,12 +236,58 @@ $(".create").click(function(event) {
 		});
 	}
 	
+	//1234356789
+	//to 123 456 780
+	function formatId(id){
+		var returnId="";
+		//cast to string
+		id = String(id)
+		//split into char array
+		id = id.split("");
+		//iterate over each three and add a space in between
+		for(var i = 0; i<id.length; i++){
+			returnId+=id[i];
+			
+			//123
+			if((i+1)%3==0)
+				returnId+=" ";
+		}
+		
+		return returnId;
+	}
+	
+	function makeActiveGame(id){
+	var Game = Parse.Object.extend("game");
+	var newGame = new Game();
+
+	newGame.set("owner_id", Utils.getCurrentUser().id);
+	newGame.set("unique_id", String(id));
+	newGame.set("owner_name",Utils.getCurrentUser().get("displayName"));
+	newGame.set("active", true);
+	newGame.set("started",false);
+
+	newGame.save(null, {
+	  success: function(newGame) {
+		// Execute any logic that should take place after the object is saved.
+		console.log("game created");
+	  },
+	  error: function(newGame, error) {
+		// Execute any logic that should take place if the save fails.
+		// error is a Parse.Error with an error code and message.
+		Utils.showError('Failed to create game, with error code: ' + error.message);
+	  }
+	});
+	}
+	
 	function idFound(id){
-		$(".loading").hide("slow",function(){
-		$(".game_created").show("slow");
+		$(".loading").slideUp("slow",function(){
+		
+		makeActiveGame(id);
+		
+		$(".game_created").slideDown("slow");
 		
 		
-		$(".generated_code").html(id);
+		$(".generated_code").html(formatId(id));
 		
 		var user = Parse.User.current();
 		var userId = user.id;
